[package]
name = "smallperm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smallperm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3", "abi3-py37"] }
rustc_data_structures = "0.1.2"

[dev-dependencies]
ahash = "0.8.11"
quickcheck = "1"
quickcheck_macros = "1"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "iterate_u32"
harness = false
