[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "smallperm"
version = "0.1.11"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "Efficient O(1)-space pseudorandom permutation; no more random.shuffle or Fisher-Yates"
license = { file = "LICENSE" }
authors = [
    {name = "RuneBlaze", email = "runeblaze@protonmail.com"}
]